[gd_scene load_steps=33 format=3 uid="uid://bxir00ch21oll"]

[ext_resource type="Script" path="res://ui/shop.gd" id="1_o083l"]
[ext_resource type="Texture2D" uid="uid://b3jxkhhr72xgn" path="res://assets/shop/shop_bg.png" id="1_xiciu"]
[ext_resource type="Texture2D" uid="uid://b7u0scn3cer0r" path="res://assets/shop/shop_eagle.png" id="4_ukas6"]
[ext_resource type="Texture2D" uid="uid://cs3mbqxh6uvht" path="res://assets/shop/shop_board.png" id="5_ar80p"]
[ext_resource type="Texture2D" uid="uid://bqa1dhjilatwb" path="res://assets/shop/shop_mag2.png" id="5_bsrn8"]
[ext_resource type="Texture2D" uid="uid://d08fi5p71dw1r" path="res://assets/shop/shop_mag1.png" id="6_dyk5c"]
[ext_resource type="Texture2D" uid="uid://cehj5l1e8aylc" path="res://assets/shop/shop_bullet2.png" id="6_ye1hl"]
[ext_resource type="Texture2D" uid="uid://bcowif75qga23" path="res://assets/shop/shop_bullet1.png" id="7_ba8oh"]
[ext_resource type="Texture2D" uid="uid://cusbr05lyrt0m" path="res://assets/shop/shop_lens2.png" id="7_s8n4w"]
[ext_resource type="Texture2D" uid="uid://d1k1f7d2ob3wj" path="res://assets/shop/shop_lens1.png" id="8_god3s"]
[ext_resource type="Texture2D" uid="uid://bpjgkul2fe6ra" path="res://assets/shop/shop_out.png" id="9_ljado"]
[ext_resource type="Texture2D" uid="uid://dqh7fknkcfnkf" path="res://assets/shop/shop_medkit.png" id="9_xr72k"]
[ext_resource type="FontFile" uid="uid://ck0koyd3diw3n" path="res://assets/baftla_font_white.png" id="13_k4xu2"]
[ext_resource type="Texture2D" uid="uid://i6xm5gu463hg" path="res://assets/feather_sheet.png" id="13_rl36r"]
[ext_resource type="Texture2D" uid="uid://rjpvc6boxetq" path="res://assets/image.png" id="15_8yocp"]
[ext_resource type="PackedScene" uid="uid://ctgvblrwc7o3h" path="res://ui/scene_transition.tscn" id="16_dkx17"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qaqk3"]
atlas = ExtResource("13_rl36r")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dg6"]
atlas = ExtResource("13_rl36r")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_euwo7"]
atlas = ExtResource("13_rl36r")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v50l"]
atlas = ExtResource("13_rl36r")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8111"]
atlas = ExtResource("13_rl36r")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34xll"]
atlas = ExtResource("13_rl36r")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_egaao"]
atlas = ExtResource("13_rl36r")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u14xh"]
atlas = ExtResource("13_rl36r")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j56wj"]
atlas = ExtResource("13_rl36r")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8tro"]
atlas = ExtResource("13_rl36r")
region = Rect2(288, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sbys5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaqk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_euwo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v50l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8111")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34xll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_egaao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u14xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j56wj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8tro")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_l77fr"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(576, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(324, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EagleShop:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EagleShop:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Background:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_7bcqc"]
resource_name = "background_slide"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(576, -0.25, 0, 0.25, 0, 576, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1000, -0.25, 0, 0.25, 0, 324, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mnqhs"]
resource_name = "close_shop"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(576, -0.25, 0, 0.25, 0, 576, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Background:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(324, -0.25, 0, 0.25, 0, 996, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EagleShop:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("EagleShop:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-672, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="Animation" id="Animation_ur8qj"]
resource_name = "shop_slide"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EagleShop:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EagleShop:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, -672, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ofk4"]
_data = {
"RESET": SubResource("Animation_l77fr"),
"background_slide": SubResource("Animation_7bcqc"),
"close_shop": SubResource("Animation_mnqhs"),
"shop_slide": SubResource("Animation_ur8qj")
}

[node name="Shop" type="Node2D"]
script = ExtResource("1_o083l")
mag1 = ExtResource("6_dyk5c")
bullet1 = ExtResource("7_ba8oh")
lens1 = ExtResource("8_god3s")
mag2 = ExtResource("5_bsrn8")
bullet2 = ExtResource("6_ye1hl")
lens2 = ExtResource("7_s8n4w")
medkit = ExtResource("9_xr72k")
out = ExtResource("9_ljado")

[node name="Background" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(576, 324)
scale = Vector2(2.4, 2.4)
texture = ExtResource("1_xiciu")

[node name="EagleShop" type="Node2D" parent="."]

[node name="Eagle" type="Sprite2D" parent="EagleShop"]
position = Vector2(584, 996)
scale = Vector2(2.4, 2.4)
texture = ExtResource("4_ukas6")

[node name="Board" type="Sprite2D" parent="EagleShop"]
position = Vector2(584, 996)
scale = Vector2(2.4, 2.4)
texture = ExtResource("5_ar80p")

[node name="Mag" type="TextureButton" parent="EagleShop/Board"]
unique_name_in_owner = true
offset_left = -2.5
offset_top = -91.0
offset_right = 93.5
offset_bottom = -27.0
texture_normal = ExtResource("9_ljado")

[node name="Bullet" type="TextureButton" parent="EagleShop/Board"]
unique_name_in_owner = true
offset_left = 100.583
offset_top = -91.0
offset_right = 157.583
offset_bottom = -38.0
texture_normal = ExtResource("9_ljado")

[node name="Lens" type="TextureButton" parent="EagleShop/Board"]
unique_name_in_owner = true
offset_left = -2.5
offset_top = -31.0
offset_right = 55.5
offset_bottom = 26.0
texture_normal = ExtResource("9_ljado")

[node name="Medkit" type="TextureButton" parent="EagleShop/Board"]
unique_name_in_owner = true
offset_left = 100.5
offset_top = -31.0
offset_right = 189.5
offset_bottom = 34.0
texture_normal = ExtResource("9_ljado")

[node name="Description" type="Label" parent="EagleShop/Board"]
unique_name_in_owner = true
offset_left = -59.5
offset_top = 33.5
offset_right = 212.5
offset_bottom = 58.5
theme_override_fonts/font = ExtResource("13_k4xu2")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
clip_text = true

[node name="Markers" type="Node2D" parent="EagleShop/Board"]
position = Vector2(-2.5, 0)

[node name="Mag1Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(-23, -98)

[node name="Mag2Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(-23, -98)

[node name="MagOutPos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(0, -91)

[node name="Bullet1Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(103, -88)

[node name="Bullet2Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(103, -95)

[node name="BulletOutPos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(103, -91)

[node name="Lens1Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(0, -25)

[node name="Lens2Pos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(0, -31)

[node name="LensOutPos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(0, -31)

[node name="MedPos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(87, -37)

[node name="MedOutPos" type="Marker2D" parent="EagleShop/Board/Markers"]
unique_name_in_owner = true
position = Vector2(103, -31)

[node name="FeatherCount" type="Node2D" parent="EagleShop"]
position = Vector2(40, 688)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="EagleShop/FeatherCount"]
position = Vector2(40, 40)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_sbys5")
autoplay = "default"
frame_progress = 0.860406

[node name="FeatherLabel" type="Label" parent="EagleShop/FeatherCount"]
unique_name_in_owner = true
offset_left = 86.0
offset_top = 10.0
offset_right = 516.0
offset_bottom = 65.0
theme_override_fonts/font = ExtResource("13_k4xu2")
theme_override_font_sizes/font_size = 40
vertical_alignment = 1

[node name="Button" type="Button" parent="EagleShop"]
offset_left = 233.0
offset_top = 689.0
offset_right = 400.0
offset_bottom = 761.0
icon = ExtResource("15_8yocp")
flat = true

[node name="Music" type="AudioStreamPlayer2D" parent="."]
position = Vector2(557, 362)
volume_db = -15.0
max_distance = 100000.0
attenuation = 0.0272047

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0ofk4")
}

[node name="SceneTransition" parent="." instance=ExtResource("16_dkx17")]

[node name="BlackBG" type="ColorRect" parent="."]
z_index = -100
offset_right = 1152.0
offset_bottom = 648.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="EagleShop/Board/Mag" to="." method="_on_mag_mouse_entered"]
[connection signal="mouse_exited" from="EagleShop/Board/Mag" to="." method="_on_mag_mouse_exited"]
[connection signal="pressed" from="EagleShop/Board/Mag" to="." method="_on_mag_pressed"]
[connection signal="mouse_entered" from="EagleShop/Board/Bullet" to="." method="_on_bullet_mouse_entered"]
[connection signal="mouse_exited" from="EagleShop/Board/Bullet" to="." method="_on_bullet_mouse_exited"]
[connection signal="pressed" from="EagleShop/Board/Bullet" to="." method="_on_bullet_pressed"]
[connection signal="mouse_entered" from="EagleShop/Board/Lens" to="." method="_on_lens_mouse_entered"]
[connection signal="mouse_exited" from="EagleShop/Board/Lens" to="." method="_on_lens_mouse_exited"]
[connection signal="pressed" from="EagleShop/Board/Lens" to="." method="_on_lens_pressed"]
[connection signal="mouse_entered" from="EagleShop/Board/Medkit" to="." method="_on_medkit_mouse_entered"]
[connection signal="mouse_exited" from="EagleShop/Board/Medkit" to="." method="_on_medkit_mouse_exited"]
[connection signal="pressed" from="EagleShop/Board/Medkit" to="." method="_on_medkit_pressed"]
[connection signal="pressed" from="EagleShop/Button" to="." method="_on_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
